# embedding-tools

./: README.md  pyproject.toml
src/embedding-tools/cli/: main.py
